--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,16 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/lab": "^3.0.0-alpha.30",
+    "material-ui-rating": "^3.0.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-draggable": "^3.2.1",
+    "react-jvectormap": "0.0.6",
     "react-player": "^1.9.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
-    "typeface-roboto": "^0.0.54"
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
