--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^3.0.0-alpha.30",
+    "highcharts": "^7.1.0",
+    "highcharts-react-official": "^2.1.3",
     "material-ui-rating": "^3.0.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
@@ -13,7 +15,7 @@
     "react-jvectormap": "0.0.6",
     "react-player": "^1.9.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
+    "react-scripts": "^2.1.8",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
