--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-draggable": "^3.2.1",
+    "react-input-range": "^1.3.0",
     "react-jvectormap": "0.0.6",
     "react-player": "^1.9.3",
     "react-router-dom": "^4.3.1",
