--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,13 @@
     "@material-ui/lab": "^3.0.0-alpha.30",
     "highcharts": "^7.1.0",
     "highcharts-react-official": "^2.1.3",
+    "material-ui-popup-state": "^1.4.0",
     "material-ui-rating": "^3.0.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-draggable": "^3.2.1",
     "react-input-range": "^1.3.0",
-    "react-jvectormap": "0.0.6",
+    "react-jvectormap": "0.0.12",
     "react-player": "^1.9.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
