--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "highcharts-react-official": "^2.1.3",
     "material-ui-popup-state": "^1.4.0",
     "material-ui-rating": "^3.0.1",
+    "material-ui-textfield-icon": "^0.2.7",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-draggable": "^3.2.1",
@@ -17,7 +18,7 @@
     "react-jvectormap": "0.0.12",
     "react-player": "^1.9.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.8",
+    "react-scripts": "^3.0.1",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
