--- a/client/package.json
+++ b/client/package.json
@@ -6,19 +6,25 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^3.0.0-alpha.30",
+    "axios": "^0.19.0",
     "highcharts": "^7.1.0",
     "highcharts-react-official": "^2.1.3",
     "material-ui-popup-state": "^1.4.0",
     "material-ui-rating": "^3.0.1",
     "material-ui-textfield-icon": "^0.2.7",
+    "moment": "^2.24.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-draggable": "^3.2.1",
     "react-input-range": "^1.3.0",
     "react-jvectormap": "0.0.12",
     "react-player": "^1.9.3",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.1",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
