--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.0",
     "highcharts": "^7.1.0",
     "highcharts-react-official": "^2.1.3",
+    "material-ui-dropzone": "^2.3.5",
     "material-ui-popup-state": "^1.4.0",
     "material-ui-rating": "^3.0.1",
     "material-ui-textfield-icon": "^0.2.7",
