--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "material-ui-textfield-icon": "^0.2.7",
     "moment": "^2.24.0",
     "react": "^16.8.3",
+    "react-country-region-selector": "^1.4.3",
     "react-dom": "^16.8.3",
     "react-draggable": "^3.2.1",
     "react-input-range": "^1.3.0",
