--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,6 @@
     "mdbreact": "^4.17.0",
     "moment": "^2.24.0",
     "react": "^16.8.3",
-    "react-country-region-selector": "^1.4.3",
     "react-dom": "^16.8.3",
     "react-draggable": "^3.2.1",
     "react-input-range": "^1.3.0",
@@ -25,6 +24,8 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.1",
+    "react-select": "^3.0.4",
+    "react-select-country-list": "^2.0.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
