--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^3.0.0-alpha.30",
+    "antd": "^3.22.0",
     "axios": "^0.19.0",
     "highcharts": "^7.1.0",
     "highcharts-react-official": "^2.1.3",
