--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@material-ui/lab": "^3.0.0-alpha.30",
     "antd": "^3.22.0",
     "axios": "^0.19.0",
+    "elasticsearch": "^16.5.0",
     "highcharts": "^7.1.0",
     "highcharts-react-official": "^2.1.3",
     "material-ui-dropzone": "^2.3.5",
